--- a/node-api/package.json
+++ b/node-api/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "pusher-chatkit-server": "^0.7.1"
+    "@pusher/chatkit-server": "^1.0.2"
   }
 }
